# bambooemm

./: CMakeLists.txt  README.md
include/: KV.hpp  bambooemm.hpp  kv.h  utils.h  utils.hpp
src/: CMakeLists.txt
src/bambooemm/: bambooemm.hpp
src/bamboofilter/: bamboofilter.hpp  predefine.h  segment.hpp
src/client/: KV.hpp
src/common/: utils.cpp
src/utils/: LoadKV.cpp
test/: CMakeLists.txt  bambooemm.cpp  encryption.cpp  evaluation.cpp  example.cpp  loadkv.cpp  segment.cpp  simd.cpp
